      Cimfomfa is hosted on github.com/mican/cimfomfa .

      Tar releases will for the foreseeable future still be hosted on
      micans.org/mcl and micans.org/cimfomfa .

      Previously cimfomfa was imported in the mcl source tree, but this
      practice has stopped. The mcl source tree contains a script that
      will download both cimfomfa and mcl tar archives and compile both.

   *  Various modes and programs were removed in a clean-up.

   *  Fixed bug in mcxarray in the case of NAs in data. The wrong N was used.
      Additionally in the presence of NAs the spearman correlation coefficient
      uses the ranks from the vectors pre-removal of the join NA set. There is
      now a mode --flexnasp that will re-compute ranks after removal of this
      set in both vectors, separately for each pair of vectors.

   *  Fixed bug in mcxload -etc <file> --expect-values; a logical cascade
      triggered wrong parse branch.

   *  Fixed bug in mcxload -etc / -235 and derived options, where --stream-mirror
      would cause a crash.  Achieve the intended effect e.g. with '-ri max'
      instead.

   *  clm vol can compute an rcl (Restricted Contingency Linkage) object,
      encoding consensus clustering values.

   *  clm close can compute the single linkage tree of a network with --sl.
      The output is an ordered list of join events that represent the tree.
      Main intended use is to apply it to the rcl object described just above.

   *  rcl-res.pl is a script that reads a single linkage tree from the
      clm close join-order output in --sl mode. It accepts resolution parameters
      as argument and will compute balanced flat clusterings from the tree
      that are adjacent in cluster size to the resolutions specified.
      It will also output a GraphViz dot file encoding the tree relationship
      between clusters at different resolution levels.

   *  rcl.sh implements the full RCL - Restricted Contingency Linkage -